--- a/css/main.css
+++ b/css/main.css
@@ -3,6 +3,8 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  -webkit-box-shadow: 0px 2px 15px 2px #A3A3A3; 
+box-shadow: 0px 2px 15px 2px #A3A3A3;
 }
 
 .wraper {
@@ -13,7 +15,6 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  border: 1px solid black;
 }
 
 .content-wraper {
@@ -38,4 +39,12 @@ textarea {
   width: 100%;
   padding: 0.5rem;
   min-height: 100px;
+}
+
+#description {
+  font-size: 18px;
+}
+
+.middle {
+  text-align: center;
 }
